feat: add WalletConfig management